--- a/example/usesec20/libhtp/Makefile
+++ b/example/usesec20/libhtp/Makefile
@@ -5,7 +5,7 @@ include ../common.mk
 CFLAGS+=-Wno-mismatched-tags
 
 ifdef PERF
-	TARGET=test_bench
+	TARGET=test_all
 else
 	TARGET=test_fuzz
 endif
